syntax = "proto3";

package store;

service StoreService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
}

message RegisterRequest {
  int32 user_id = 1;
  string domain = 2;
  string name = 3;
}

message RegisterResponse {
  int32 status = 1;
  string message = 2;
  DataRegisterResponse data = 3;
  repeated string error = 4;
}

message DataRegisterResponse {
  int32 id = 1;
  int32 user_id = 2;
  string domain = 3;
  string name = 4;
  string created_at = 5;
  string updated_at = 6;
}